- Enhance schema - Cleanup menu object - Update schema validator version