@@ -10,6 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.access.prepost.PostFilter;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -17,14 +18,16 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class MenuService {
+    private final static String ADMIN_MENU = "CORE.MENU.DASHBOARD";
     private final ModuleRepository moduleRepository;
     private final MenuRepository menuRepository;
 
     @PostFilter("filterObject.authorities.size() > 0 ? hasAnyAuthority(filterObject.authorities) : true")
+    @Transactional
     public List<Menu> getMenu() {
         List<Menu> menuItems = new ArrayList<>();
         Menu menu = new Menu();
-        menu.setName("CORE.MENU.DASHBOARD");
+        menu.setName(ADMIN_MENU);
         menu.setState("dashboard");
         menu.setType(MenuType.icon);
         menu.setTooltip("CORE.MENU.DASHBOARD");
@@ -68,19 +71,10 @@ public class MenuService {
                 menuL2 = menuL2.stream()
                     .filter(m -> m.getModule().getStarted())
                     .map(menu2 -> {
-                        if (StringUtils.isEmpty(menu2.getParent().getState())) {
-                            menu2.setIgnoreParentState(true);
-                        }
                         menu1.setType(MenuType.dropDown);
                         Set<Menu> menuL3 = new TreeSet<>(menuRepository.findByLevelAndParentName(MenuLevel.LEVEL_3, menu2.getName()))
                             .stream()
                             .filter(m -> m.getModule().getStarted())
-                            .map(menu3 -> {
-                                if (StringUtils.isEmpty(menu3.getParent().getState())) {
-                                    menu3.setIgnoreParentState(true);
-                                }
-                                return menu3;
-                            })
                             .collect(Collectors.toSet());
                         menu2.setSubs(new HashSet<>(menuL3));
                         if (!menuL3.isEmpty()) {
@@ -89,7 +83,7 @@ public class MenuService {
                         return menu2;
                     })
                     .collect(Collectors.toSet());
-                if (!menu1.getName().equals("Administration")) {
+                if (!menu1.getName().equals(ADMIN_MENU)) {
                     menu1.setSubs(new HashSet<>(menuL2));
                 } else {
                     Set<Menu> adminSub = admin.getSubs();
@@ -98,8 +92,7 @@ public class MenuService {
                 }
                 return menu1;
             })
-            .filter(menu1 -> !menu1.getName().equals("Administration"))
-            .collect(Collectors.toList())
+            .filter(menu1 -> !menu1.getName().equals(ADMIN_MENU)).toList()
         ));
         List<Menu> menus = new ArrayList<>(menusL1);
         menuItems.addAll(menus);
